@@ -88,7 +88,7 @@ public:
     virtual void SetUnderlined(bool underlined);
     virtual void SetEncoding(wxFontEncoding encoding);
 
-    WXDECLARE_COMPAT_SETTERS
+    wxDECLARE_COMMON_FONT_METHODS();
 
     // Unofficial API, don't use
     virtual void SetNoAntiAliasing(bool no = true);
